# psysimCC

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  chainlit.md  pyproject.toml  requirements.txt  simulador_paciente_template.md
.chainlit/: config.toml
.claude/: settings.json
design_handoff_simulador/: README.md  Wireframes Simulador Clínico.html
docs/superpowers/plans/: 2026-04-26-auth-supervisor-rubrica.md
fichas/validated/: ana_02.yaml  carlos_01.yaml  joao_01.yaml  leticia_01.yaml  maria_01.yaml
frontend/: .env.production  middleware.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/session/[sessionId]/: page.tsx
frontend/app/session/[sessionId]/supervision/: page.tsx
frontend/components/: AuthForm.tsx  AuthProvider.tsx  DashboardClient.tsx  DashboardStats.tsx  LogoutButton.tsx  PatientGrid.tsx  RecentSessions.tsx  RubricaView.tsx  SessionView.tsx  SupervisionView.tsx  TrajectoryChart.tsx
frontend/lib/: api.ts  supabase-server.ts
src/: api.py  app.py  auth.py  database.py  ficha_loader.py  generator.py  patient_agent.py  rubrica_data.py  session.py  supervisor_agent.py  timer.py  voice.py
supabase/migrations/: 001_add_user_id.sql
