[project]
name = "simulador-clinico"
version = "0.1.0"
description = "Simulador de pacientes para treino clínico de estudantes de psicologia"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
simulador = "src.session:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
