[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "simulador-clinico"
version = "0.1.0"
description = "Simulador de pacientes para treino clínico de estudantes de psicologia"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "supabase>=2.25.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "PyJWT>=2.8.0",
]

[project.scripts]
simulador = "src.session:main"
gerador = "src.generator:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
